// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser indexing multi-level bracketed 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": IndexedGet {
      "closingSquare": {
        "isReserved": false,
        "kind": "RightSquare",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "]",
      },
      "indexes": [
        Literal {
          "_location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "value": Int32 {
            "inArray": false,
            "kind": 4,
            "value": 6,
          },
        },
      ],
      "obj": IndexedGet {
        "closingSquare": {
          "isReserved": false,
          "kind": "RightSquare",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "]",
        },
        "indexes": [
          Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 0,
            },
          },
        ],
        "obj": IndexedGet {
          "closingSquare": {
            "isReserved": false,
            "kind": "RightSquare",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "]",
          },
          "indexes": [
            Literal {
              "_location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "value": Int32 {
                "inArray": false,
                "kind": 4,
                "value": 2,
              },
            },
          ],
          "obj": Variable {
            "name": {
              "isReserved": false,
              "kind": "Identifier",
              "literal": undefined,
              "location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "foo",
            },
          },
          "optional": false,
        },
        "optional": false,
      },
      "optional": false,
    },
  },
]
`;

exports[`parser indexing multi-level dotted 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": DottedGet {
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "bar",
      },
      "obj": Variable {
        "name": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "foo",
        },
      },
      "optional": false,
    },
  },
]
`;

exports[`parser indexing multi-level mixed 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": DottedGet {
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "baz",
      },
      "obj": IndexedGet {
        "closingSquare": {
          "isReserved": false,
          "kind": "RightSquare",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "]",
        },
        "indexes": [
          Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 0,
            },
          },
        ],
        "obj": DottedGet {
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "bar",
          },
          "obj": Variable {
            "name": {
              "isReserved": false,
              "kind": "Identifier",
              "literal": undefined,
              "location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "foo",
            },
          },
          "optional": false,
        },
        "optional": false,
      },
      "optional": false,
    },
  },
]
`;

exports[`parser indexing one level bracketed 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": IndexedGet {
      "closingSquare": {
        "isReserved": false,
        "kind": "RightSquare",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "]",
      },
      "indexes": [
        Literal {
          "_location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "value": Int32 {
            "inArray": false,
            "kind": 4,
            "value": 2,
          },
        },
      ],
      "obj": Variable {
        "name": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "foo",
        },
      },
      "optional": false,
    },
  },
]
`;

exports[`parser indexing one level dotted 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": DottedGet {
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "bar",
      },
      "obj": Variable {
        "name": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "foo",
        },
      },
      "optional": false,
    },
  },
]
`;

exports[`parser indexing one level dotted and bracketed single dot 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": IndexedGet {
      "closingSquare": {
        "isReserved": false,
        "kind": "RightSquare",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "]",
      },
      "indexes": [
        Literal {
          "_location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "value": Int32 {
            "inArray": false,
            "kind": 4,
            "value": 2,
          },
        },
      ],
      "obj": Variable {
        "name": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "foo",
        },
      },
      "optional": false,
    },
  },
]
`;
